--- a/Paginas/moderacionResenas.html
+++ b/Paginas/moderacionResenas.html
@@ -19,20 +19,26 @@
 </head>
 <body class="bg-gradient-to-b from-green-100 via-blue-50 to-blue-100 min-h-screen flex flex-col">
 
-  <!-- ENCABEZADO -->
-  <header class="bg-transparent shadow-none">
-    <div class="flex items-center justify-between px-6 py-4">
+  <!-- ENCABEZADO FIJO -->
+  <header class="fixed top-0 left-0 w-full bg-white/90 backdrop-blur-md shadow-md z-50">
+    <div class="flex items-center justify-between px-6 py-3">
       <h1 class="text-xl font-semibold text-gray-800">Gestión de Reseñas - Administrador</h1>
-      <button onclick="window.location.href='../index.html'"
-        class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">
-        Inicio
-      </button>
+      <div class="flex items-center gap-3">
+        <button onclick="abrirModal()" 
+          class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">
+          + Nueva Reseña
+        </button>
+        <button onclick="window.location.href='../index.html'"
+        class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-yellow-700 transition duration-200">
+          Inicio
+        </button>
+      </div>
     </div>
     <div class="h-1 w-full bg-blue-300"></div>
   </header>
 
   <!-- CONTENIDO -->
-  <main class="flex-1 p-6">
+  <main class="flex-1 p-6 mt-24">
 
     <!-- RESUMEN -->
     <div id="resumen" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-6"></div>
@@ -47,9 +53,6 @@
           <option value="aprobada">Aprobadas</option>
         </select>
       </div>
-      <button onclick="abrirModal()" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg text-sm transition">
-        + Nueva Reseña
-      </button>
     </div>
 
     <!-- LISTADO DE RESEÑAS -->
@@ -104,12 +107,12 @@
       const negativas = resenas.filter(r => r.calificacion <= 2).length;
 
       resumen.innerHTML = `
-        <div class="bg-white p-4 rounded-xl shadow text-center">
+        <div class="bg-blue-200 p-4 rounded-xl shadow text-center">
           <h3 class="text-sm text-gray-600">Total reseñas</h3>
-          <p class="text-2xl font-semibold text-gray-900">${total}</p>
+          <p class="text-2xl font-semibold text-blue-900">${total}</p>
         </div>
-        <div class="bg-green-100 p-4 rounded-xl shadow text-center">
-          <h3 class="text-sm text-green-700">Publicadas</h3>
+        <div class="bg-green-200 p-4 rounded-xl shadow text-center">
+          <h3 class="text-sm text-green-900">Publicadas</h3>
           <p class="text-2xl font-semibold text-green-800">${aprobadas}</p>
         </div>
         <div class="bg-yellow-100 p-4 rounded-xl shadow text-center">
@@ -206,3 +209,4 @@
   </script>
 </body>
 </html>
+
