--- a/Paginas/resenas.html
+++ b/Paginas/resenas.html
@@ -9,55 +9,64 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Roboto', sans-serif; }
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 50;
+      backdrop-filter: blur(8px);
+      background: rgba(255, 255, 255, 0.9);
+    }
   </style>
 </head>
 
 <body class="bg-gradient-to-b from-green-100 via-blue-50 to-blue-100 min-h-screen flex flex-col">
 
-  <!-- Encabezado -->
-  <header class="bg-transparent shadow-none">
-    <div class="flex items-center justify-between px-6 py-4">
+  <!-- Encabezado fijo -->
+  <header class="shadow-md border-b border-blue-200">
+    <div class="flex flex-col sm:flex-row items-center justify-between px-6 py-3 gap-2">
       <h1 class="text-xl font-semibold text-gray-800">Lista de Reseñas</h1>
-      <button onclick="window.location.href='../index.html'"
-              class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Inicio</button>
+
+      <div class="flex flex-wrap gap-2">
+        <button onclick="abrirModalResena()"
+                class="bg-green-600 hover:bg-blue-600 text-white py-1.5 px-4 rounded-xl text-sm font-semibold transition transform hover:scale-105">
+          ➕ Dejar Nueva Reseña
+        </button>
+
+        <button onclick="window.location.href='../index.html'"
+                class="bg-yellow-600 hover:bg-red-700 text-white py-1.5 px-4 rounded-xl text-sm font-semibold transition">
+          🏠 Inicio
+        </button>
+      </div>
     </div>
-    <div class="h-1 w-full bg-blue-300"></div>
   </header>
 
   <!-- Contenido principal -->
-  <main class="flex-1 p-6 flex flex-col items-center">
+  <main class="flex-1 p-6 flex flex-col items-center w-full">
 
     <!-- Título -->
-    <div class="mb-6 text-center">
+    <div class="mb-6 text-center mt-2">
       <h2 class="text-2xl font-semibold text-gray-800">Reseñas Publicadas</h2>
       <p class="text-gray-600">Conoce las experiencias de otros usuarios.</p>
     </div>
 
-    <!-- Contenedor de reseñas simuladas (2 columnas en pantallas medianas o grandes) -->
-    <div id="listaResenas" class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-5xl">
+    <!-- Contenedor de reseñas -->
+    <div id="listaResenas" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-7xl">
       <!-- Se llenará dinámicamente -->
-    </div>
-
-    <!-- Botón para nueva reseña -->
-    <div class="mt-8">
-      <button onclick="abrirModalResena()"
-              class="bg-green-600 hover:bg-blue-600 text-white py-2 px-4 rounded-xl font-semibold transition transform hover:scale-105">
-        Dejar Nueva Reseña
-      </button>
     </div>
   </main>
 
   <!-- Modal para nueva reseña -->
   <div id="modalResena" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center z-50">
-    <div class="bg-white rounded-2xl shadow-2xl p-6 w-[90%] max-w-lg relative">
-      <button onclick="cerrarModalResena()" class="absolute top-2 right-3 text-red-600 font-bold text-lg">X</button>
+    <div class="bg-white rounded-2xl shadow-2xl p-6 w-[90%] max-w-lg relative animate-fadeIn">
+      <button onclick="cerrarModalResena()" class="absolute top-2 right-3 text-red-600 font-bold text-lg">✕</button>
       <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Deja tu Reseña</h3>
 
       <form id="formResena" onsubmit="return enviarResena(event)" class="space-y-4">
         <input type="text" id="nombre" placeholder="Tu nombre"
                class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition" required>
 
-        <select id="calificacion" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition">
+        <select id="calificacion"
+                class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition">
           <option value="5">5 - Excelente</option>
           <option value="4">4 - Muy Bueno</option>
           <option value="3">3 - Bueno</option>
@@ -65,12 +74,12 @@
           <option value="1">1 - Malo</option>
         </select>
 
-        <textarea id="comentario" rows="4" placeholder="Escribe tu comentario aquí..."
+        <textarea id="comentario" rows="3" placeholder="Escribe tu comentario aquí..."
                   class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500 transition" required></textarea>
-
+        <p id="mensajeError" class="text-red-600 text-sm"></p>
         <div class="text-center">
           <button type="submit"
-                  class="bg-green-600 hover:bg-blue-600 text-white py-2 px-4 rounded-xl font-semibold transition transform hover:scale-105">
+                  class="bg-green-600 hover:bg-blue-600 text-white py-2 px-5 rounded-xl font-semibold transition transform hover:scale-105">
             Enviar Reseña
           </button>
         </div>
@@ -88,70 +97,86 @@
   </div>
 
   <script>
-    // Simulación de reseñas publicadas
-    const resenas = [
-      { nombre: "Laura Gómez", calificacion: 5, comentario: "Excelente servicio y atención personalizada." },
-      { nombre: "Carlos Ruiz", calificacion: 4, comentario: "Muy buena experiencia, todo salió bien." },
-      { nombre: "Ana Torres", calificacion: 3, comentario: "Hubo algunos retrasos, pero el lugar es bonito." }
-    ];
+  // Reseñas simuladas
+  const resenas = [
+    { nombre: "Laura Gómez", calificacion: 5, comentario: "Excelente servicio y atención personalizada.", fecha: "2025-10-20" },
+    { nombre: "Carlos Ruiz", calificacion: 4, comentario: "Muy buena experiencia, todo salió bien.", fecha: "2025-10-22" },
+    { nombre: "Ana Torres", calificacion: 3, comentario: "Hubo algunos retrasos, pero el lugar es bonito.", fecha: "2025-10-25" },
+    { nombre: "Santiago Pérez", calificacion: 5, comentario: "La mejor experiencia, 100% recomendado.", fecha: "2025-10-30" },
+    { nombre: "María López", calificacion: 4, comentario: "Buen servicio, volvería sin dudarlo.", fecha: "2025-11-01" },
+    { nombre: "Javier Díaz", calificacion: 3, comentario: "El lugar estaba bien, aunque faltó limpieza.", fecha: "2025-11-02" }
+  ];
 
-    function mostrarResenas() {
-      const contenedor = document.getElementById('listaResenas');
-      contenedor.innerHTML = resenas.map(r => `
-        <div class="bg-white shadow-md rounded-xl p-4 border-l-4 ${r.calificacion >= 4 ? 'border-green-500' : r.calificacion === 3 ? 'border-yellow-400' : 'border-red-500'}">
-          <h4 class="text-lg font-semibold text-gray-800">${r.nombre}</h4>
-          <p class="text-yellow-500 text-sm mb-2">⭐ ${r.calificacion} / 5</p>
-          <p class="text-gray-600">${r.comentario}</p>
+  // Mostrar reseñas
+  function mostrarResenas() {
+    const contenedor = document.getElementById('listaResenas');
+    contenedor.innerHTML = resenas.map(r => `
+      <div class="bg-white shadow-md rounded-xl p-4 border-l-4 h-[120px] flex flex-col justify-between
+        ${r.calificacion >= 4 ? 'border-green-500' : r.calificacion === 3 ? 'border-yellow-400' : 'border-red-500'}">
+        <div>
+          <div class="flex items-center justify-between mb-1">
+            <h4 class="text-lg font-semibold text-gray-800">${r.nombre}</h4>
+            <p class="text-yellow-500 text-sm">⭐ ${r.calificacion} / 5</p>
+          </div>
+          <p class="text-gray-600 text-sm mb-1">${r.comentario}</p>
+          <p class="text-[11px] text-gray-400">📅 ${r.fecha}</p>
         </div>
-      `).join('');
+      </div>
+    `).join('');
+  }
+  mostrarResenas();
+
+  // Abrir y cerrar modales
+  function abrirModalResena() { document.getElementById('modalResena').classList.remove('hidden'); }
+  function cerrarModalResena() { document.getElementById('modalResena').classList.add('hidden'); }
+
+  function cerrarModalConfirmacion() {
+    document.getElementById('modalConfirmacion').classList.add('hidden');
+    cerrarModalResena();
+  }
+
+  // Validación inteligente con límite de caracteres
+  function enviarResena(event) {
+    event.preventDefault();
+
+    const nombre = document.getElementById('nombre').value.trim();
+    const calificacion = parseInt(document.getElementById('calificacion').value);
+    const comentarioInput = document.getElementById('comentario');
+    const mensajeError = document.getElementById('mensajeError');
+    const comentario = comentarioInput.value.trim();
+
+    // Validar longitud del comentario
+    if (comentario.length > 100) {
+      mensajeError.textContent = `El comentario no debe superar los 100 caracteres. Actualmente tiene ${comentario.length}.`;
+      comentarioInput.classList.add("border-red-500");
+      return;
+    } else {
+      mensajeError.textContent = "";
+      comentarioInput.classList.remove("border-red-500");
     }
 
-    mostrarResenas();
+    const palabrasNegativas = ["malo", "pésimo", "demora", "problema", "inconforme", "regular", "queja", "insatisfecho", "reclamo", "fallo", "tarde"];
+    const contieneNegativo = palabrasNegativas.some(p => comentario.toLowerCase().includes(p));
 
-    // Abrir y cerrar modales
-    function abrirModalResena() { document.getElementById('modalResena').classList.remove('hidden'); }
-    function cerrarModalResena() { document.getElementById('modalResena').classList.add('hidden'); }
+    let requiereRevision = false;
+    if (calificacion <= 2) requiereRevision = true;
+    else if (contieneNegativo) requiereRevision = true;
 
-    function cerrarModalConfirmacion() {
-      document.getElementById('modalConfirmacion').classList.add('hidden');
-      cerrarModalResena();
+    const fecha = new Date().toISOString().split('T')[0];
+
+    const mensajeModal = document.getElementById('mensajeModal');
+    if (!requiereRevision) {
+      resenas.push({ nombre, calificacion, comentario, fecha });
+      mostrarResenas();
+      mensajeModal.textContent = "¡Gracias por tu reseña! Se ha publicado exitosamente.";
+    } else {
+      mensajeModal.textContent = "Tu reseña ha sido enviada para verificación por el administrador.";
     }
 
-    // Envío de reseña con validación inteligente
-    function enviarResena(event) {
-      event.preventDefault();
+    document.getElementById('modalConfirmacion').classList.remove('hidden');
+    document.getElementById('formResena').reset();
+  }
+</script>
 
-      const nombre = document.getElementById('nombre').value.trim();
-      const calificacion = parseInt(document.getElementById('calificacion').value);
-      const comentario = document.getElementById('comentario').value.trim().toLowerCase();
-      const mensajeModal = document.getElementById('mensajeModal');
-
-      // Palabras negativas comunes
-      const palabrasNegativas = ["malo", "pésimo", "demora", "problema", "inconforme", "regular", "queja", "insatisfecho", "reclamo", "fallo", "tarde"];
-      const contieneNegativo = palabrasNegativas.some(p => comentario.includes(p));
-
-      let requiereRevision = false;
-
-      // Condición 1 y 2 → siempre revisión
-      if (calificacion <= 2) {
-        requiereRevision = true;
-      }
-      // Condición 3 a 5 → si hay comentarios negativos, revisión
-      else if (contieneNegativo) {
-        requiereRevision = true;
-      }
-
-      if (!requiereRevision) {
-        resenas.push({ nombre, calificacion, comentario });
-        mostrarResenas();
-        mensajeModal.textContent = "¡Gracias por tu reseña! Se ha publicado exitosamente.";
-      } else {
-        mensajeModal.textContent = "Tu reseña ha sido enviada para verificación por el administrador.";
-      }
-
-      document.getElementById('modalConfirmacion').classList.remove('hidden');
-      document.getElementById('formResena').reset();
-    }
-  </script>
 </body>
 </html>
